--- a/src/components/BooksCard/BooksCard.module.scss
+++ b/src/components/BooksCard/BooksCard.module.scss
@@ -5,6 +5,7 @@
   border-radius: 3px;
   //width: 400px;
   margin: 5px;
+  //min-width: 200px;
 
   font-family: 'Mulish', sans-serif;
   text-align: center;
@@ -22,21 +23,11 @@
   padding: 5px;
 }
 
-.card_testing {
-  border: 1px solid red;
-  border-radius: 3px;
-  //width: 400px;
-  //max-width: 25%;
-  margin: 5px;
+.card_frame {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-  font-family: 'Mulish', sans-serif;
-  text-align: center;
-
-  &:hover {
-    background-color: lightgray;
-  }
-
-  & h3 {
-    font-family: 'Philosopher', sans-serif;
-  }
+  //border: 1px solid red;
+  //min-width: 200px;
 }
