--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,7 +3,8 @@
 
 .container {
   background-color: #f7f0e0;
-  background-image: url("src/assets/blurred-neutral-stripes.png");
+  // background-image: url("src/assets/blurred-neutral-stripes.png");
+  background-image: url("../../assets/blurred-neutral-stripes.png");
   background-size: cover;
   height: 250px;
 
