adds lower btns and modal animation

--- a/src/components/BooksCard/BooksCard.module.scss
+++ b/src/components/BooksCard/BooksCard.module.scss
@@ -3,6 +3,7 @@
 .card {
   border: 1px solid black;
   border-radius: 3px;
+  padding: 8px;
   //width: 400px;
   margin: 5px;
   //min-width: 200px;
