--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,10 @@
 //   text-align: center;
 // }
 
+@import url('https://fonts.googleapis.com/css2?family=Mulish&family=Philosopher&display=swap');
+
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Mulish', sans-serif;
 }
