--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -6,7 +6,9 @@
   // background-image: url("src/assets/blurred-neutral-stripes.png");
   background-image: url("../../assets/blurred-neutral-stripes.png");
   background-size: cover;
-  height: 250px;
+  min-height: 250px;
+  max-height: 3030px;
+  //consider a min-height instead
 
   font-family: 'Mulish', sans-serif;
   text-align: center;
@@ -24,7 +26,7 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 350px) {
   h1 {
     font-size: 20px;
   }
