--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -2,13 +2,6 @@ body.active-modal {
   overflow-y: hidden;
 }
 
-.btn-modal {
-  padding: 10px 20px;
-  display: block;
-  margin: 100px auto 0;
-  font-size: 18px;
-}
-
 .modal, .overlay {
   width: 100vw;
   height: 100vh;
@@ -22,6 +15,15 @@ body.active-modal {
 .overlay {
   background: rgba(49,49,49,0.8);
 }
+
+@keyframes popOpenTransition {
+  from {
+    transform: translate(-50%, -50%) scale(0);
+  } to {
+    transform: translate(-50%, -50%) scale(1);
+  }
+}
+
 .modal_content {
   position: absolute;
   top: 40%;
@@ -32,8 +34,22 @@ body.active-modal {
   padding: 14px 28px;
   border-radius: 3px;
   max-width: 600px;
-  min-width: 300px;
+  min-width: 230px;
+  //min-width: 300px;
+
+  //margin: auto, 8px;
+  //border: 1px solid red;
+
+  text-align: left;
+
+  animation-name: popOpenTransition;
+  animation-duration: 300ms;
+  animation-timing-function: ease-in-out;
 }
+
+
+
+
 
 .close_modal {
   position: absolute;
@@ -41,3 +57,16 @@ body.active-modal {
   right: 10px;
   padding: 5px 7px;
 }
+
+// @media screen and (max-width: 350px) {
+//   .modal_content {
+//     width: 300px;
+//   }
+
+  
+// }
+
+// .showing .modal_content {
+//   transition: all 300ms ease-in-out;
+//   transform: translate(-50%, -50%) scale(1);
+// }
