--- a/src/index.scss
+++ b/src/index.scss
@@ -38,3 +38,7 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+.active_modal {
+  overflow-y: hidden;
+}
