adds scrolling modal

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,8 +1,13 @@
 .footer {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+
   background-color: #f7f0e0;
   background-image: url("../../assets/blurred-neutral-stripes.png");
   background-size: cover;
-  min-height: 15px;
+  min-height: 18px;
 
   display: flex;
   justify-content: center;
