--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -26,7 +26,7 @@ body.active-modal {
 
 .modal_content {
   position: absolute;
-  top: 40%;
+  top: 45%;
   left: 50%;
   transform: translate(-50%, -50%);
   line-height: 1.4;
@@ -37,6 +37,10 @@ body.active-modal {
   min-width: 230px;
   //min-width: 300px;
 
+  max-height: 65vh;
+  overflow: hidden;
+  overflow-y: scroll;
+
   //margin: auto, 8px;
   //border: 1px solid red;
 
@@ -45,6 +49,10 @@ body.active-modal {
   animation-name: popOpenTransition;
   animation-duration: 300ms;
   animation-timing-function: ease-in-out;
+
+  & * {
+    padding: 4px 0px;
+  }
 }
 
 
