--- a/src/containers/BooksList/BooksList.module.scss
+++ b/src/containers/BooksList/BooksList.module.scss
@@ -26,8 +26,9 @@
   gap: 1rem;
   //grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  border: 1px solid red;
-  width: 100vw;
+  //border: 1px solid red;
+  width: 98vw;
+  //margin: 0px 10px;
 }
 
 .to_top {
