--- a/src/components/BooksCard/BooksCard.module.scss
+++ b/src/components/BooksCard/BooksCard.module.scss
@@ -24,6 +24,11 @@
   padding: 5px;
 }
 
+.image {
+  max-width: 160px;
+  padding: 5px;
+}
+
 .card_frame {
   display: flex;
   align-items: center;
