--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -1,3 +1,5 @@
+@use "src/styles/palette.scss";
+
 body.active-modal {
   overflow-y: hidden;
 }
@@ -13,7 +15,8 @@ body.active-modal {
 }
 
 .overlay {
-  background: rgba(49,49,49,0.8);
+  //background: rgba(49,49,49,0.8);
+  background: palette.$bg-grey;
 }
 
 @keyframes popOpenTransition {
@@ -30,7 +33,8 @@ body.active-modal {
   left: 50%;
   transform: translate(-50%, -50%);
   line-height: 1.4;
-  background: #f1f1f1;
+  //background: #f1f1f1;
+  background: palette.$near-white;
   padding: 14px 28px;
   border-radius: 3px;
   max-width: 600px;
