--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -1,10 +1,13 @@
+@use "src/styles/palette.scss";
+
 .footer {
   position: relative;
   bottom: 0;
   left: 0;
   width: 100vw;
 
-  background-color: #f7f0e0;
+  //background-color: #f7f0e0;
+  background-color: palette.$pale-neutral;
   background-image: url("../../assets/blurred-neutral-stripes.png");
   background-size: cover;
   min-height: 18px;
